--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,4 +4,35 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     </style>
 
+    <style name="RowContainer.WithThumbnail">
+        <item name="android:paddingLeft">@dimen/material_margin_horizontal_thumbnail</item>
+    </style>
+
+    <style name="ImageList">
+        <item name="android:layout_marginRight">@dimen/padding_standard</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
+    <style name="RatingSmall" parent="@style/Text">
+        <item name="android:paddingBottom">@dimen/padding_small</item>
+        <item name="android:paddingLeft">@dimen/padding_half</item>
+        <item name="android:paddingRight">@dimen/padding_half</item>
+        <item name="android:paddingTop">@dimen/padding_small</item>
+        <item name="android:lines">1</item>
+    </style>
+
+    <style name="RowContainer">
+        <item name="android:gravity">center</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:paddingBottom">@dimen/material_margin_vertical</item>
+        <item name="android:paddingLeft">@dimen/material_margin_horizontal</item>
+        <item name="android:paddingRight">@dimen/material_margin_horizontal</item>
+        <item name="android:paddingTop">@dimen/material_margin_vertical</item>
+    </style>
+
+    <style name="Text">
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
 </resources>
