--- a/app/src/main/res/layout/card_view_game.xml
+++ b/app/src/main/res/layout/card_view_game.xml
@@ -17,7 +17,7 @@
             android:padding="12dp">
 
             <ImageView
-                android:id="@+id/image_view_profile_pic"
+                android:id="@+id/game_image"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:adjustViewBounds="true"
@@ -28,7 +28,7 @@
                 android:id="@+id/game_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/image_view_profile_pic"
+                android:layout_below="@id/game_image"
                 android:textSize="24sp"
                 android:layout_centerHorizontal="true"
                 tools:text="Terra Mystica" />
