--- a/app/src/main/res/layout/card_view_game.xml
+++ b/app/src/main/res/layout/card_view_game.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="600dp"
         android:elevation="0dp"
-        android:padding="12dp"
+        android:layout_margin="10dp"
         android:background="@android:color/white"
         android:orientation="vertical">
 
@@ -15,13 +15,13 @@
             android:id="@+id/card_top"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="12dp"
+            android:padding="32dp"
             >
 
             <ImageView
                 android:id="@+id/game_image"
-                android:layout_width="250dp"
-                android:layout_height="250dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:adjustViewBounds="true"
                 android:src="@drawable/thumbnail_image_empty" />
