--- a/app/src/main/res/layout/fragment_search_game.xml
+++ b/app/src/main/res/layout/fragment_search_game.xml
@@ -17,13 +17,15 @@
         android:layout_below="@id/stack_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@null"
         android:adjustViewBounds="true"
-        android:maxWidth="84dp"
-        android:maxHeight="84dp"
+        android:maxWidth="90dp"
+        android:maxHeight="90dp"
         android:scaleType="fitXY"
         android:padding="14dp"
-        android:background="@android:color/white"
-        android:src="@drawable/move"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="40dp"
+        android:src="@drawable/ic_join_round"
         android:layout_alignParentRight="true"
         />
 
