--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,13 +25,21 @@
             android:layout_gravity="center_horizontal"
             android:src="@drawable/logo_transparent" />
 
-        <com.facebook.login.widget.LoginButton
-            android:id="@+id/login_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <com.firebase.ui.auth.util.ui.SupportVectorDrawablesButton
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/login_fb"
+            android:layout_width="300dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="100dp" />
+            style="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
+            android:text="@string/fui_sign_in_with_facebook" />
+
+        <com.firebase.ui.auth.util.ui.SupportVectorDrawablesButton
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/login_ggl"
+            android:layout_width="300dp"
+            android:layout_gravity="center_horizontal"
+            style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
+            android:text="@string/fui_sign_in_with_google" />
 
     </LinearLayout>
 
