--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,6 +51,16 @@
             style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
             android:text="@string/fui_sign_in_with_google" />
 
+        <com.firebase.ui.auth.util.ui.SupportVectorDrawablesButton
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/login_phone"
+            android:layout_width="300dp"
+            android:layout_gravity="center_horizontal"
+            style="@style/FirebaseUI.Button.AccountChooser.PhoneButton"
+            android:text="@string/fui_sign_in_with_phone"
+            tools:ignore="UnusedIds" /> <!-- Used in tests -->
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
