--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     android:scaleType = "centerCrop"
-    tools:context=".Views.Login.LoginActivity">
+    tools:context=".views.login.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
