--- a/app/src/main/res/layout/fragment_search_game.xml
+++ b/app/src/main/res/layout/fragment_search_game.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="Views.Fragments.SearchGameFragment">
+    tools:context="views.fragments.SearchGameFragment">
 
     <com.yuyakaido.android.cardstackview.CardStackView
         android:id="@+id/stack_view"
